[package]
name = "realworld-gotham"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"

[dependencies]
gotham = "0.3"
gotham_derive = "0.3"

hyper = "0.12"
futures = "0.1"
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.3", features = ["postgres", "extras"] }
r2d2 = "0.8.3"
tokio = { version = "0.1.13" }
tokio-threadpool = "0.1.9"
chrono = { version = "0.4.6", features = ["serde"] }

[dev-dependencies]
fake = "1.2.2"
