[package]
name = "realworld-gotham"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4.0"
gotham_middleware_jwt = "0.3.3"
gotham_middleware_diesel = "0.1.0"
jsonwebtoken = "6.0"
hyper = "0.12"
futures = "0.1"
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.6.0"
diesel = { version = "1.3.3", features = ["postgres", "extras"] }
r2d2 = "0.8.3"
tokio = "0.1.17"
tokio-threadpool = "0.1.12"
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.9.0"

[dev-dependencies]
fake = "1.2.2"
